--- a/benchpress_analysis.ipynb
+++ b/benchpress_analysis.ipynb
@@ -18,14 +18,13 @@
     "    ```\n",
     "    git clone https://github.com/felixleopoldo/benchpress.git\n",
     "    cd benchpress\n",
-    "    git checkout paralleldg\n",
-    "    git pull origin paralleldg\n",
-    "    git checkout ba83a10d\n",
+    "    git checkout dualGraph\n",
+    "    git pull origin dualGraph\n",
     "    ```\n",
     "\n",
     "3. Run the code with the bash command:\n",
     "    ```\n",
-    "    snakemake --cores all --use-singularity --configfile config/elmasri_parallel.json\n",
+    "    snakemake --cores all --use-singularity --configfile config/dualGL_sparse_wishart.json\n",
     "    ```\n",
     "\n",
     "4. All results should exist in the folder `benchpress/results`.\n",
@@ -33,11 +32,11 @@
     "5. To analyze the results, run an external Jupyter notebook as follows:\n",
     "    ```\n",
     "    cd ../\n",
-    "    git clone git@github.com:melmasri/parallelDG.git\n",
+    "    git clone git@github.com:melmasri/hybrid-learner.git\n",
     "    jupyter notebook\n",
     "    ```\n",
     "\n",
-    "6. In the browser (normally at localhost:8889), run the notebook `examples/benchpress_analysis.ipynb`.\n",
+    "6. In the browser (normally at localhost:8889), run the notebook `benchpress_analysis.ipynb`.\n",
     "\n",
     "\n",
     "7. Please change the variable BENCHPRESS_LOC to the location of benchpress results, normally in `benchpress/results/`\n"
@@ -52,14 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current wd: /Users/m.elmasri/src/dualgl\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "current wd: /Users/m.elmasri/src/hybrid-learner\n"
      ]
     }
    ],
@@ -67,14 +68,18 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import os\n",
-    "print(f\"current wd: {os.getcwd()}\")\n",
     "from utils import *\n",
     "import networkx as nx\n",
     "import matplotlib\n",
     "import json\n",
     "from networkx.drawing.nx_pydot import graphviz_layout\n",
+    "# Create the directory 'img'\n",
+    "if not os.path.exists(SAVE_LOC):\n",
+    "    # If it doesn't exist, create it\n",
+    "    os.makedirs(SAVE_LOC)\n",
+    "print(f\"current wd: {os.getcwd()}\")\n",
     "sys.path.append('..')\n",
-    "sys.path.append('/Users/m.elmasri/src/parallelDG/parallelDG/')\n",
+    "#sys.path.append('/Users/m.elmasri/src/parallelDG/parallelDG/')\n",
     "sns.set_style(\"whitegrid\")\n",
     "roc_columns = ['adjmat', 'parameters', 'data']\n",
     "\n",
@@ -111,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
